Fix for bug 244392 (Removing lines form a Bullet list using the [ back arrow ] or [Delete] keys results in <> and </> tags embedded in code when in Normal Mode). r=brade, sr=jst.